--- a/index.css
+++ b/index.css
@@ -144,6 +144,7 @@ main {
     width: 100%;
     height: 100%; /* Ensure the image takes up the full height of the card */
     object-fit: cover;
+    aspect-ratio: 1086/611;
 }
 
 .card img.grayscale {
